--- a/learn_matplotlib.ipynb
+++ b/learn_matplotlib.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Hello, my name is Brahyam, and i'm learning the python data stack, wanted to document my journey through matplotlib in this notebook, maybe someone will find it useful, i really hope so. \n",
     "\n",
-    "This notebook is based on Keith Galli's Intro to Data Visualization in python With matplotlib! - Video on youtube. Go chick him out and support his channel. \n",
+    "This notebook is based on Keith Galli's Intro to Data Visualization in python With matplotlib! - Video on youtube. Go check him out and support his channel. \n",
     "\n",
     "If in any cell you feel lost, check the documentation [here](https://matplotlib.org/3.5.3/api/_as_gen/matplotlib.pyplot.html) \n",
     "\n"
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we need to impor the libraries we'll be using in the notebook, in order to use these libraries you need to install them first through pip or conda(python packet managaers). \n",
+    "First we need to import the libraries we'll be using in the notebook, in order to use these libraries you need to install them first through pip or conda(python packet managers). \n",
     "\n",
     "In the case that you're using the Anaconda python distribution you already have the required libraries. "
    ]
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22229dfe990>]"
+       "[<matplotlib.lines.Line2D at 0x19de23a9b10>]"
       ]
      },
      "execution_count": 2,
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2222c50b590>]"
+       "[<matplotlib.lines.Line2D at 0x19de63b1d90>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets give the axes (x and y) titles in the graph "
+    "We can give the axes (x and y) titles in the graph "
    ]
   },
   {
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's edit the font"
+    "Let's edit the font"
    ]
   },
   {
@@ -972,6 +972,14 @@
     "for i in bars:\n",
     "    i.set_hatch(patterns.pop(0))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next step, this one is about."
    ]
   }
  ],
