--- a/learn_matplotlib.ipynb
+++ b/learn_matplotlib.ipynb
@@ -34,8 +34,8 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -978,9 +978,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Next step, this one is about."
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -999,7 +997,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
